--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <div class="imgs">
       <img
-        src="imgs/img-1.jpg"
+        src="imgs/img-1.png"
         alt="image 1"
         data-img
         id="img-1"
         class="top-section-img show"
       />
-      <img src="imgs/img-2.jpg" alt="image 2" data-img id="img-2" />
-      <img src="imgs/img-3.jpg" alt="image 3" data-img id="img-3" />
+      <img src="imgs/img-2.png" alt="image 2" data-img id="img-2" />
+      <img src="imgs/img-3.png" alt="image 3" data-img id="img-3" />
 
     </div>
     <section class="top-section full-screen-section">
@@ -31,9 +31,9 @@
         </p>
       </div>
       <div class="right">
-        <img src="imgs/img-1.jpg" width="400px" alt="">
-        <img src="imgs/img-2.jpg" width="400px" alt="">
-        <img src="imgs/img-3.jpg" width="400px" alt="">
+        <img src="imgs/img-1.png" width="400px" alt="">
+        <img src="imgs/img-2.png" width="400px" alt="">
+        <img src="imgs/img-3.png" width="400px" alt="">
       </div>
     </section>
     <section class="full-screen-section first-main-section" id="section1">
